test/fail/fail_8.prsl
// RUN: (%edir/prsl --codegen %s 2>&1) | filecheck %s
// RUN: (%edir/prsl %s 2>&1) | filecheck %s
// CHECK: fail_8.prsl:13:1: error: at '*': Expect expression, got something else

var = 1;
var++;
var--;
var < 4;
var + 4;
var * 2;
var = 5;
-var;
*var;